--- a/J2P_review.ipynb
+++ b/J2P_review.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "04b69711",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,10 @@
      "text": [
       "[1, 2, 3]\n",
       "[1]\n",
-      "[1, 2, 4, 5] ['a', 'c', 'd', 'v']\n"
+      "[1, 2, 4, 5] ['a', 'c', 'd', 'v']\n",
+      "['b', 'c', 'a']\n",
+      "2\n",
+      "0\n"
      ]
     }
    ],
@@ -273,8 +276,476 @@
     "c = ['a', 'v', 'c', 'd']\n",
     "b.sort()\n",
     "c.sort()\n",
-    "print(b,c, end = \"\\n\")"
+    "print(b,c, end = \"\\n\")\n",
+    "\n",
+    "# 리스트 뒤집기\n",
+    "d = ['a', 'c', 'b']\n",
+    "d.reverse()\n",
+    "print(d)\n",
+    "\n",
+    "# 위치 반환(index)\n",
+    "a = [1, 2, 3]\n",
+    "print(a.index(3))\n",
+    "print(a.index(1))\n",
+    "#print(a.index(4)): 리스트에 존재하지 않으면 ValueError 발생"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "44e963e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 1, 2, 3]\n",
+      "[4, 1, 2, 5, 3]\n",
+      "[1, 2, 1, 2, 3]\n",
+      "[1, 2, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에 요소 삽입\n",
+    "a = [1, 2, 3]\n",
+    "a.insert(0, 4)\n",
+    "print(a)\n",
+    "\n",
+    "a. insert(3,5)\n",
+    "print(a)\n",
+    "\n",
+    "#리스트 요소 제거(remove)\n",
+    "a = [1, 2, 3, 1, 2, 3]\n",
+    "a.remove(3) #리스트에서 첫 번째로 나오는 x를 삭제하는 함수\n",
+    "print(a)\n",
+    "a.remove(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17fd96b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 2, 3]\n",
+      "[1, 2, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#리스트 요소 제거(remove)\n",
+    "a = [1, 2, 3, 1, 2, 3]\n",
+    "a.remove(3) #리스트에서 첫 번째로 나오는 x를 삭제하는 함수\n",
+    "print(a)\n",
+    "a.remove(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "62d022fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[1, 2]\n",
+      "2\n",
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#리스트 요소 끄집어내기(pop)\n",
+    "a = [1, 2, 3]\n",
+    "print(a.pop()) #리스트의 맨 마지막 요소를 돌려주고 그 요소는 삭제\n",
+    "print(a)\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "print(a.pop(1)) #리스트의 x번째 요소를 돌려주고 그 요소는 삭제\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bd47480e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#리스트 확장(extend)\n",
+    "a = [1, 2, 3]\n",
+    "a.extend([4, 5]) #x에는 리스트만 올 수 있음\n",
+    "print(a)\n",
+    "b = [6, 7]\n",
+    "a.extend(b)\n",
+    "print(a)\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "a += [4, 5]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d855222",
+   "metadata": {},
+   "source": [
+    "# Tuple Type\n",
+    "- **tuple vs list**\n",
+    "    - **list**: 항목 값의 변화가 가능\n",
+    "    - **tuple**: 항목 값의 변화가 불가\n",
+    "- 프로그램이 실행되는 동안 그 값이 항상 변하지 않기를 바라거나 값이 바뀔까 걱정하고 싶지않다면 튜플을 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8870bc12",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object doesn't support item deletion",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m t1 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m t1[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object doesn't support item deletion"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = (1, 2, 'a', 'b')\n",
+    "del t1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b188bbbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m t2 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m t1[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t2 = (1, 2, 'a', 'b')\n",
+    "t1[0] = 'c'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f17b33",
+   "metadata": {},
+   "source": [
+    "# Dictionary Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "20819ae4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "dict_keys(['name', 'phone', 'birth'])\n",
+      "['name', 'phone', 'birth']\n",
+      "name\n",
+      "phone\n",
+      "birth\n",
+      "dict_items([('name', 'pey'), ('phone', '0119993323'), ('birth', '1118')])\n",
+      "None\n",
+      "{}\n",
+      "pey\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:'a'}\n",
+    "del a[1]\n",
+    "print(a)\n",
+    "\n",
+    "a = {'name': 'pey', 'phone': '0119993323', 'birth': '1118'}\n",
+    "# Key 얻기\n",
+    "print(a.keys()) # 메모리 낭비를 줄이기 위해 dict_keys 객체 반환\n",
+    "print(list(a.keys()))\n",
+    "\n",
+    "for k in a.keys():\n",
+    "    print(k) # 리스트를 사용하는 것과 차이가 없지만, 리스트 고유의 append, insert, pop, remove, sort 함수 등은 사용불가\n",
+    "\n",
+    "# Key, Value 쌍 얻기\n",
+    "print(a.items())\n",
+    "\n",
+    "# Key, Value 지우기\n",
+    "print(a.clear())\n",
+    "print(a)\n",
+    "\n",
+    "# Key로 Value 얻기(get)\n",
+    "a = {'name':'pey', 'phone':'0119993323', 'birth': '1118'}\n",
+    "print(a.get('name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dda74b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "bar\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#인덱스로 가져오는 것과 get함수의 차이\n",
+    "a = {'name':'pey', 'phone':'0119993323', 'birth': '1118'}\n",
+    "print(a.get('nokey'))\n",
+    "#print(a['nokey']) #KeyError: 'nokey'오류 발생\n",
+    "\n",
+    "\"\"\"\n",
+    "딕셔너리 안에 찾으려는 Key 값이 없을 경우 미리 정해 둔 디폴트 값을 대신 가져오게 하고 싶을 때에는 get(x, '디폴트 값')을 사용하면 편리\n",
+    "\"\"\"\n",
+    "print(a.get('foo', 'bar'))\n",
+    "\n",
+    "#해당 Key가 딕셔너리 안에 있는지 조사하기(in)\n",
+    "a = {'name':'pey', 'phone':'0119993323', 'birth': '1118'}\n",
+    "print('name' in a)\n",
+    "print('email' in a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "017ae6cd",
+   "metadata": {},
+   "source": [
+    "# Set Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f26a1846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "1\n",
+      "(1, 2, 3)\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = set([1, 2, 3])\n",
+    "l1 = list(s1) #set 자료형에 저장된 값을 인덱싱으로 접근하려면 리스트나 튜플로 변환 후 해야 함\n",
+    "print(l1)\n",
+    "print(l1[0])\n",
+    "\n",
+    "t1 = tuple(s1)\n",
+    "print(t1)\n",
+    "print(t1[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fd5144f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 6}\n",
+      "{4, 5, 6}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{1, 2, 3}\n",
+      "{8, 9, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#교집합, 합집합, 차집합\n",
+    "s1 = set([1, 2, 3, 4, 5, 6])\n",
+    "s2 = set([4, 5, 6, 7, 8, 9])\n",
+    "\n",
+    "#교집합\n",
+    "print(s1&s2)\n",
+    "print(s1.intersection(s2))\n",
+    "\n",
+    "#합집합\n",
+    "print(s1|s2)\n",
+    "print(s1.union(s2))\n",
+    "\n",
+    "#차집합\n",
+    "print(s1.difference(s2))\n",
+    "print(s2.difference(s1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1a6c7c",
+   "metadata": {},
+   "source": [
+    "# Boolean Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "89ae3d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "거짓\n",
+      "참\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "while a:\n",
+    "    print(a.pop())\n",
+    "\n",
+    "if []:\n",
+    "    print(\"참\")\n",
+    "else:\n",
+    "    print(\"거짓\")\n",
+    "\n",
+    "if [1, 2, 3]:\n",
+    "    print(\"참\")\n",
+    "else:\n",
+    "    print(\"거짓\")\n",
+    "\n",
+    "print(bool('python'))\n",
+    "print(bool(''))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59c1102",
+   "metadata": {},
+   "source": [
+    "# Copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fe2de7be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 3] 4411803520\n",
+      "[1, 2, 3] 4411994432\n",
+      "[1, 2, 3] 4411801920\n",
+      "[1, 2, 3] 4411447616\n",
+      "[1, 2, 3] 4411803520\n",
+      "[1, 2, 3] 4411574912\n",
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. [:] 이용 - 리스트 전체를 가리키는 [:]을 사용해서 복사\n",
+    "a = [1, 2, 3]\n",
+    "b = a[:]\n",
+    "a[1] = 4 #a 리스트 값을 바꾸더라도 b 리스트에는 영향을 끼치치 않음\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))\n",
+    "\n",
+    "# 2. copy 모듈 이용\n",
+    "from copy import copy\n",
+    "a = [1, 2, 3]\n",
+    "b = copy(a)\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))\n",
+    "\n",
+    "# 3. copy 함수 이용\n",
+    "a = [1, 2, 3]\n",
+    "b = a.copy()\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))\n",
+    "\n",
+    "#변수를 만드는 여러가지 방법\n",
+    "a, b = ('python', 'life')\n",
+    "(a, b) = 'python', 'life'\n",
+    "[a, b] = ['python', 'life']\n",
+    "a = b = 'python'\n",
+    "\n",
+    "#변수 바꾸기\n",
+    "a = 3\n",
+    "b = 5\n",
+    "a, b = b, a\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a9326f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
