--- a/Review_CAU_AI/Ch4_Mathematics.ipynb
+++ b/Review_CAU_AI/Ch4_Mathematics.ipynb
@@ -1,12 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "eed8280a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    \\|\\vec{a}\\|_2 = \\sqrt{a{^2_0} + a{^2_1} + ... + a{^2_{D-1}}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "098cacd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1622776601683795\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 3])\n",
+    "print(np.linalg.norm(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e454218b",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    1+2+\\cdots+1000 = \n",
+    "        \\left[ {\\begin{array}{c} \n",
+    "            1 \\\\\n",
+    "            1 \\\\\n",
+    "            \\vdots \\\\\n",
+    "            1\n",
+    "        \\end{array} } \\right]\n",
+    "        \\cdot\n",
+    "        \\left[ {\\begin{array}{c}\n",
+    "            1 \\\\\n",
+    "            2 \\\\\n",
+    "            \\vdots \\\\\n",
+    "            1000\n",
+    "        \\end{array} } \\right]\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a00a82",
+   "id": "03987ca9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
