--- a/Review_CAU_AI/CH5_Kaggle_Abalone.ipynb
+++ b/Review_CAU_AI/CH5_Kaggle_Abalone.ipynb
@@ -30,15 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "d9f5e382",
+   "execution_count": 67,
+   "id": "d0c7a930",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas_profiling'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [67]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_profiling\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ProfileReport\n\u001b[1;32m      7\u001b[0m pd\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisplay.max_columns\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m pd\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisplay.min_rows\u001b[39m\u001b[38;5;124m'\u001b[39m,  \u001b[38;5;241m30\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas_profiling'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from pandas_profiling import ProfileReport\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.min_rows',  30)\n",
@@ -51,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34989be",
+   "id": "34348d3a",
    "metadata": {},
    "source": [
     "### Features\n",
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5b66c6",
+   "id": "3c20a88a",
    "metadata": {},
    "source": [
     "$\\rightarrow \\textbf{There is no missing Value}$"
@@ -111,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "750ea0f3",
+   "id": "211fb0a6",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b436c30",
+   "id": "e512bd13",
    "metadata": {},
    "source": [
     "$ \\rightarrow \\textbf{1 Categorical Feature, 8 Numerical Features}$"
@@ -305,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "77eecfef",
+   "id": "36d432d4",
    "metadata": {},
    "outputs": [
     {
@@ -497,12 +510,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4fbfd1a",
+   "id": "0c8b338e",
    "metadata": {},
    "source": [
-    "I can A few **outliers** in the numerical data\n",
+    "$ \\rightarrow \\textbf{A few outliers in the numerical data}$  \n",
     "- Max for Height\n",
-    "- Max for Shucked weight"
+    "- Max for Shucked weight\n",
+    "\n",
+    "1. Just apply clamping\n",
+    "2. Simply use models/methods that are less sensitive to outliers\n",
+    "    - For instance\n",
+    "        - scaling using a standard scaler\n",
+    "        - modelling using something like a random forest."
    ]
   },
   {
