--- a/Kaggle/Soccer/EDA.ipynb
+++ b/Kaggle/Soccer/EDA.ipynb
@@ -23,9 +23,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Kaggle Link\n",
     "os.environ['KAGGLE_USERNAME'] = 'gassojaehwan'\n",
-    "os.environ['KAGGLE_KEY'] = 'a4579f4dc7ec62a3711492fd1eb33a2b'"
+    "os.environ['KAGGLE_KEY'] = '***'\n",
+    "\"\"\""
    ]
   },
   {
@@ -10396,7 +10398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
