--- a/Kaggle/USElection2020/Modeling.ipynb
+++ b/Kaggle/USElection2020/Modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "8221dff2",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "53d83551",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "69f689eb",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "39ce5e9f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "7db60d5d",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "[4731 rows x 34 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,8 +705,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "f0e52098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Pres_DEM', 'Pres_REP', 'Gov_DEM', 'Gov_REP', 'TotalPop', 'Men',\n",
+       "       'Hispanic', 'White', 'Black', 'Native', 'Asian', 'Pacific',\n",
+       "       'VotingAgeCitizen', 'IncomePerCap', 'Poverty', 'ChildPoverty',\n",
+       "       'Professional', 'Service', 'Office', 'Construction', 'Production',\n",
+       "       'Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp', 'WorkAtHome',\n",
+       "       'MeanCommute', 'Employed', 'PrivateWork', 'PublicWork', 'SelfEmployed',\n",
+       "       'FamilyWork', 'Unemployment'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_norm.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "80c702ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_norm.drop(['Pres_DEM', 'Pres_REP', 'Gov_DEM', 'Gov_REP'], axis=1)\n",
+    "y = df_norm['Pres_DEM']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edc86158",
    "metadata": {},
    "outputs": [],
    "source": []
