--- a/Kaggle/HeartFailure/Modeling.ipynb
+++ b/Kaggle/HeartFailure/Modeling.ipynb
@@ -300,6 +300,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bf5b6679",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    1\n",
+       "2    1\n",
+       "3    1\n",
+       "4    1\n",
+       "Name: DEATH_EVENT, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "68fca00a",
    "metadata": {},
@@ -3149,7 +3175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
