--- a/TensorFlow_Keras_Tutorial/TensorFlow_Keras_Basic.ipynb
+++ b/TensorFlow_Keras_Tutorial/TensorFlow_Keras_Basic.ipynb
@@ -5,7 +5,7 @@
    "id": "b19dff30",
    "metadata": {},
    "source": [
-    "# Tensorflow & Keras"
+    "# Tensorflow & Keras Basic"
    ]
   },
   {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "8e3f5923",
+   "id": "f5e46c21",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "2c607f8d",
+   "id": "8f2ba0d3",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f253a2cb",
+   "id": "0856bc96",
    "metadata": {},
    "source": [
     "# Tensor"
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "006a6501",
+   "id": "fae5b870",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "28bf3b0f",
+   "id": "93a4b771",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "77a85b51",
+   "id": "4bf6cc97",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "3261cbab",
+   "id": "b446f23b",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "b7fcd8a5",
+   "id": "96119bc3",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "ac26c158",
+   "id": "382fb4e1",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "e81becb7",
+   "id": "83b25105",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "c6ba99b2",
+   "id": "a90535c3",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "ce8a3933",
+   "id": "098c9142",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "16c57612",
+   "id": "7830b791",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "158be790",
+   "id": "ee8afe24",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "04dfce82",
+   "id": "51fb49e1",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd2c638",
+   "id": "ca1b122c",
    "metadata": {},
    "source": [
     "### Variable\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "bc49a30d",
+   "id": "e53eadb6",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "e2105de5",
+   "id": "684b52e4",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "ba8fffed",
+   "id": "840bb17d",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "6173ea90",
+   "id": "0c5db124",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "e3d17601",
+   "id": "f8182ef0",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "416fc8de",
+   "id": "cabd8d4e",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "25f3a905",
+   "id": "21041bec",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "b5cf5814",
+   "id": "328683c5",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "c1600ef9",
+   "id": "fd6342b2",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "01a1a180",
+   "id": "c802da9f",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "6b8ad21c",
+   "id": "be9be601",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "aafb0fba",
+   "id": "bacb67db",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "f4fd3d12",
+   "id": "499a5bd3",
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "b4f8d443",
+   "id": "53cfde90",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "fd7ab4e3",
+   "id": "48cdc6e9",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "7701d202",
+   "id": "b16bc1cb",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "cedc29c1",
+   "id": "4b283f04",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "027b700e",
+   "id": "75a05ff1",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "c728485b",
+   "id": "cc4a26ad",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "737b8255",
+   "id": "50482e77",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "0e7da992",
+   "id": "2a79290f",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "843bc356",
+   "id": "30b8d5a1",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "55febb6e",
+   "id": "32038472",
    "metadata": {},
    "outputs": [
     {
