--- a/TensorFlow_Keras_Tutorial/TensorFlow_Keras_Basic.ipynb
+++ b/TensorFlow_Keras_Tutorial/TensorFlow_Keras_Basic.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d3304e26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reset"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b0260a75",
    "metadata": {},
