Pytorch Visualization End.

--- a/Pytorch_Tutorial/Pytorch_Dataset.ipynb
+++ b/Pytorch_Tutorial/Pytorch_Dataset.ipynb
@@ -622,7 +622,7 @@
     "        optimizer.step() # Weight and Bias Update\n",
     "        \n",
     "        if batch % 100 == 0:\n",
-    "            loss, current = loss.item(), batch *len(X)\n",
+    "            loss, current = loss.item(), batch * len(X)\n",
     "            print(f\"loss: {loss:>7f} [{current:>5d}/{size:>5d}]\")\n",
     "\n",
     "# For Test\n",
@@ -883,7 +883,7 @@
     }
    ],
    "source": [
-    "model2.eval() # .eval(): training을 하는 상태가 아님을 알려줌; inferenc할 때 사용\n",
+    "model2.eval() # .eval(): training을 하는 상태가 아님을 알려줌; inference할 때 사용\n",
     "test_loop(test_dataloader, model2, loss_fn)"
    ]
   },
