MNIST_YN_TensorFlow

--- a/DeepLearning/CNN/MNIST_CNN_TensorFlow.ipynb
+++ b/DeepLearning/CNN/MNIST_CNN_TensorFlow.ipynb
@@ -265,7 +265,7 @@
     "              activation='softmax'\n",
     "             )(drop1)\n",
     "    \n",
-    "    model = keras.models.Model(inputs, outputs)\n",
+    "    model = keras..evalumodels.Model(inputs, outputs)\n",
     "    return model\n",
     "\n",
     "func_model = create_func_model()\n",
