--- a/DeepLearning/CV_Model/train.ipynb
+++ b/DeepLearning/CV_Model/train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "33de9053",
+   "execution_count": 18,
+   "id": "ade101b9",
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6721bae",
+   "id": "5857b34a",
    "metadata": {},
    "source": [
     "# LeNet-5"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a6aa6a",
+   "id": "a6c6ecf2",
    "metadata": {},
    "source": [
     "### Input Shape: 28x28x1(MNIST)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da24e0a",
+   "id": "5b57ea1f",
    "metadata": {},
    "source": [
     "## Build Models"
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "740f3434",
+   "execution_count": 12,
+   "id": "3289b02d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2e3977d6",
+   "execution_count": 13,
+   "id": "04e3f33c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f1d7f221",
+   "execution_count": 14,
+   "id": "980e96b2",
    "metadata": {
     "scrolled": false
    },
@@ -132,25 +132,25 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_2 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+      " input_3 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
       "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 28, 28, 6)         156       \n",
+      " conv2d_4 (Conv2D)           (None, 28, 28, 6)         156       \n",
       "                                                                 \n",
-      " average_pooling2d_1 (Averag  (None, 14, 14, 6)        0         \n",
+      " average_pooling2d_3 (Averag  (None, 14, 14, 6)        0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 10, 10, 16)        2416      \n",
+      " conv2d_5 (Conv2D)           (None, 10, 10, 16)        2416      \n",
       "                                                                 \n",
-      " average_pooling2d_2 (Averag  (None, 5, 5, 16)         0         \n",
+      " average_pooling2d_4 (Averag  (None, 5, 5, 16)         0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 1, 1, 120)         48120     \n",
+      " conv2d_6 (Conv2D)           (None, 1, 1, 120)         48120     \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 120)               0         \n",
+      " flatten_1 (Flatten)         (None, 120)               0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 84)                10164     \n",
+      " dense_2 (Dense)             (None, 84)                10164     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                850       \n",
+      " dense_3 (Dense)             (None, 10)                850       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 61,706\n",
@@ -167,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b739ef56",
+   "execution_count": 15,
+   "id": "9f093123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +186,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa9a3c91",
+   "execution_count": 17,
+   "id": "2e3e7972",
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.callbacks import ModelCheckpoint, LearningRateScheduler\n",
     "\n",
-    "lr_scheduler = LearningRateScheduler"
+    "lr_scheduler = LearningRateScheduler(lr_schedule)\n",
+    "checkpoints = ModelCheckpoint(filepath='path_to_svae_file/file.hdf5',\n",
+    "                              monitor='val_acc',\n",
+    "                              verbose=1,\n",
+    "                              save_best_only=True\n",
+    "                             )\n",
+    "callbacks = [checkpoints, lr_scheduler]\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer='sgd',\n",
+    "              metrics=['accuracy']\n",
+    "             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f788d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = model.fit()"
    ]
   }
  ],
