--- a/DeepLearning/CV_Model/train.ipynb
+++ b/DeepLearning/CV_Model/train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ade101b9",
+   "execution_count": 1,
+   "id": "1e29252e",
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,104 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5857b34a",
+   "id": "86b7a4ae",
+   "metadata": {},
+   "source": [
+    "# MNIST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72253bdf",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "91648f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from keras.datasets import mnist\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format='retina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9f25b0c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Labels: {0: 5923, 1: 6742, 2: 5958, 3: 6131, 4: 5842, 5: 5421, 6: 5918, 7: 6265, 8: 5851, 9: 5949}\n",
+      "Test Labels: {0: 980, 1: 1135, 2: 1032, 3: 1010, 4: 982, 5: 892, 6: 958, 7: 1028, 8: 974, 9: 1009}\n"
+     ]
+    }
+   ],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "\n",
+    "unique, counts = np.unique(y_train, return_counts=True)\n",
+    "print(f\"Train Labels: {dict(zip(unique, counts))}\")\n",
+    "\n",
+    "unique, counts = np.unique(y_test, return_counts=True)\n",
+    "print(f\"Test Labels: {dict(zip(unique, counts))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3aea33c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexes = np.random.randint(0, x_train.shape[0], size=9)\n",
+    "images = x_train[indexes]\n",
+    "labels = y_train[indexes]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31178ac7",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1f32a797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_labels = len(unique)\n",
+    "\n",
+    "y_train = keras.utils.to_categorical(y_train)\n",
+    "y_test = keras.utils.to_categorical(y_test)\n",
+    "\n",
+    "x_train = np.reshape(x_train, [-1, x_train.shape[1], x_train.shape[2], 1])\n",
+    "x_test = np.reshape(x_test, [-1, x_test.shape[1], x_test.shape[2], 1])\n",
+    "x_train = x_train.astype('float32')/255\n",
+    "x_test = x_test.astype('float32')/255\n",
+    "\n",
+    "input_shape = x_train.shape[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eb0d687",
    "metadata": {},
    "source": [
     "# LeNet-5"
@@ -28,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c6ecf2",
+   "id": "a4a5855a",
    "metadata": {},
    "source": [
     "### Input Shape: 28x28x1(MNIST)\n",
@@ -50,76 +147,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5b57ea1f",
-   "metadata": {},
-   "source": [
-    "## Build Models"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3289b02d",
+   "execution_count": 15,
+   "id": "377e8665",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D, AveragePooling2D, Flatten, Dense"
+    "from LeNet import build_lenet_5, lr_schedule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "04e3f33c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_lenet_5(input_shape, num_classes=10):\n",
-    "    \n",
-    "    inputs = keras.Input(shape = input_shape)\n",
-    "\n",
-    "    conv1 = Conv2D(kernel_size=5,\n",
-    "                   strides=1,\n",
-    "                   activation='tanh',\n",
-    "                   filters=6,\n",
-    "                   padding='same')(inputs)\n",
-    "    pool2 = AveragePooling2D(pool_size=2,\n",
-    "                             strides=2,\n",
-    "                             padding='valid')(conv1)\n",
-    "    conv3 = Conv2D(kernel_size=5,\n",
-    "                   strides=1,\n",
-    "                   activation='tanh',\n",
-    "                   filters=16,\n",
-    "                   padding='valid')(pool2)\n",
-    "    pool4 = AveragePooling2D(pool_size=2,\n",
-    "                             strides=2,\n",
-    "                             padding='valid')(conv3)\n",
-    "    conv5 = Conv2D(kernel_size=5,\n",
-    "                   strides=1,\n",
-    "                   activation='tanh',\n",
-    "                   filters=120,\n",
-    "                   padding='valid')(pool4)\n",
-    "    \n",
-    "    flat = Flatten()(conv5)\n",
-    "    \n",
-    "    dense6 = Dense(units=84,\n",
-    "                   activation='tanh')(flat)\n",
-    "    \n",
-    "    outputs = Dense(units=num_classes,\n",
-    "                    activation='softmax')(dense6)\n",
-    "    \n",
-    "    model = keras.Model(inputs=inputs, outputs=outputs, name='LeNet_5')\n",
-    "    \n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "980e96b2",
+   "execution_count": 16,
+   "id": "e02ab839",
    "metadata": {
     "scrolled": false
    },
@@ -128,29 +168,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Metal device set to: Apple M2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-03 18:27:38.016596: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-03-03 18:27:38.017013: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Model: \"LeNet_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_3 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
+      " input_1 (InputLayer)        [(None, 28, 28, 1)]       0         \n",
       "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 28, 28, 6)         156       \n",
+      " conv2d (Conv2D)             (None, 28, 28, 6)         156       \n",
       "                                                                 \n",
-      " average_pooling2d_3 (Averag  (None, 14, 14, 6)        0         \n",
+      " average_pooling2d (AverageP  (None, 14, 14, 6)        0         \n",
+      " ooling2D)                                                       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 10, 10, 16)        2416      \n",
+      "                                                                 \n",
+      " average_pooling2d_1 (Averag  (None, 5, 5, 16)         0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 10, 10, 16)        2416      \n",
+      " conv2d_2 (Conv2D)           (None, 1, 1, 120)         48120     \n",
       "                                                                 \n",
-      " average_pooling2d_4 (Averag  (None, 5, 5, 16)         0         \n",
-      " ePooling2D)                                                     \n",
+      " flatten (Flatten)           (None, 120)               0         \n",
       "                                                                 \n",
-      " conv2d_6 (Conv2D)           (None, 1, 1, 120)         48120     \n",
+      " dense (Dense)               (None, 84)                10164     \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 120)               0         \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 84)                10164     \n",
-      "                                                                 \n",
-      " dense_3 (Dense)             (None, 10)                850       \n",
+      " dense_1 (Dense)             (None, 10)                850       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 61,706\n",
@@ -161,33 +216,26 @@
     }
    ],
    "source": [
-    "model = build_lenet_5(input_shape=(28,28,1))\n",
+    "model = build_lenet_5(input_shape=input_shape)\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9f093123",
+   "execution_count": null,
+   "id": "54629bdd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lr_schedule(epoch):\n",
-    "    if epoch <= 2:\n",
-    "        lr = 5e-4\n",
-    "    elif epoch > 2 and epoch <= 5:\n",
-    "        lr = 2e-4\n",
-    "    elif epoch >5 and epoch <= 9:\n",
-    "        lr = 5e-5\n",
-    "    else:\n",
-    "        lr = 1e-5\n",
-    "    return lr"
+    "keras.utils.plot_model(model=model,\n",
+    "                       to_file='LeNet5'\n",
+    "                      )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2e3e7972",
+   "execution_count": 4,
+   "id": "76180888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,11 +257,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87f788d6",
+   "id": "c39c0e79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist = model.fit()"
+    "hist = model.fit(x_train, x_test, )"
    ]
   }
  ],
